Fix Dockerfile for restricted network environments - remove apt-get dependencies

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,23 +1,17 @@
-# Use a base image that already has Python packages
+# Simplified Dockerfile for restricted network environments
 FROM python:3.11-slim
 
 # Set working directory
 WORKDIR /app
 
-# Note: curl is already available in python:3.11-slim image
-
-# Install Python dependencies
-COPY requirements.txt .
-RUN pip3 install --no-cache-dir -r requirements.txt
-
 # Copy application files
-COPY app.py .
+COPY simple_app.py .
 COPY servers_config.json .
 COPY templates/ templates/
 COPY static/ static/
 
 # Set proper permissions
-RUN chmod +x app.py
+RUN chmod +x simple_app.py
 
 # Create non-root user for security
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
@@ -26,9 +20,9 @@ USER appuser
 # Expose port
 EXPOSE 5001
 
-# Health check using curl
+# Health check using Python (no external dependencies)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:5001/api/health || exit 1
+    CMD python3 -c "import urllib.request; urllib.request.urlopen('http://localhost:5001/api/health')" || exit 1
 
-# Run the application
-CMD ["python3", "app.py"]
+# Run the simplified application
+CMD ["python3", "simple_app.py"]
