--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   netdata-dashboard:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.simple
     container_name: netdata-dashboard
     ports:
       - "5001:5001"
@@ -13,7 +15,7 @@ services:
       # Mount servers config for easy updates
       - ./servers_config.json:/app/servers_config.json:ro
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5001/api/health"]
+      test: ["CMD", "python3", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5001/api/health')"]
       interval: 30s
       timeout: 10s
       retries: 3
