Fix Dockerfile.simple to install Python dependencies and use correct app.py

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -4,14 +4,18 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
+# Install Python dependencies
+COPY requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
+
 # Copy application files
-COPY simple_app.py .
+COPY app.py .
 COPY servers_config.json .
 COPY templates/ templates/
 COPY static/ static/
 
 # Set proper permissions
-RUN chmod +x simple_app.py
+RUN chmod +x app.py
 
 # Create non-root user for security
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
@@ -24,5 +28,5 @@ EXPOSE 5001
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD python3 -c "import urllib.request; urllib.request.urlopen('http://localhost:5001/api/health')" || exit 1
 
-# Run the simplified application
-CMD ["python3", "simple_app.py"]
+# Run the application
+CMD ["python3", "app.py"]
